# tiktok-reader-for-claude-opus

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: digest.py  transcribe.py
src/: main.rs
